구간 생성시 상행역을 잘못 입력한 경우 오류가 발생하는 인수테스트 및 로직 추가